# S4rCiv

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DISCIPLINE.md  Makefile  README.md  atlas.hcl  compose.test.yaml  compose.yaml  skills-lock.json
.claude/: settings.json
.claude/hooks/: guard-prod-docker.sh
.github/workflows/: test.yml
db/migrations/: 20260602000000_init.sql  20260603000001_observation_plane.sql  20260603000002_interpretation_plane.sql  20260603000003_control_plane.sql  20260603000004_kokkai_read_models.sql  20260603000005_kokkai_source_seed.sql  20260603000006_vote_source_speech.sql  20260603000007_egov_law_read_models.sql  20260603000008_egov_source_seed.sql  20260603000009_vote_person_index.sql  20260603000010_source_rate_limit_30s.sql  20260603000011_legislator_district_read_model.sql  20260603000012_giin_roster_source_seed.sql  20260603000013_legislator_district_name_key.sql  20260603000014_sangiin_vote_read_model.sql  20260603000015_sangiin_source_seed.sql  atlas.sum  (+3 more)
docs/: README_EN.md
scripts/: check-proto-drift.sh  set-api-ro-password.sh
secrets/: db_password.txt.example
services/differ/: Cargo.toml  Dockerfile  build.rs
services/differ/proto/s4rciv/diff/v1/: diff.proto
services/differ/src/: config.rs  connect.rs  diff.rs  lib.rs  main.rs  proto.rs  xmlmodel.rs
services/differ/tests/: diff_contract.rs  wire.rs
web/: .dockerignore  .npmrc  Dockerfile  buf.gen.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts  vitest-setup.ts  vitest.config.ts
(+236 files in other folders)
