[package]
name = "differ"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "differ"
path = "src/lib.rs"

[[bin]]
name = "differ"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
# Already in the tree via axum; the direct dep only enables the `limit` feature.
tower = { version = "0.5", features = ["limit"] }
prost = "0.14"
quick-xml = "0.40"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Domain prose mixes Japanese terms with proto/XML element names; backtick noise
# is not worth chasing, and prost-generated docs also trip this.
doc_markdown = "allow"

[profile.release]
strip = true
